tests/snapshots/lexer__operators__arithmetic_expression.snap
---
source: tests/lexer.rs
expression: "lex(\"a + b * c\")"
---
Ok(
    [
        Token {
            kind: Identifier(
                "a",
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Plus,
            span: Span {
                start: 2,
                end: 3,
            },
        },
        Token {
            kind: Identifier(
                "b",
            ),
            span: Span {
                start: 4,
                end: 5,
            },
        },
        Token {
            kind: Star,
            span: Span {
                start: 6,
                end: 7,
            },
        },
        Token {
            kind: Identifier(
                "c",
            ),
            span: Span {
                start: 8,
                end: 9,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 9,
                end: 9,
            },
        },
    ],
)
