tests/snapshots/lexer__operators__arrow.snap
---
source: tests/lexer.rs
expression: "lex(\"->\")"
---
Ok(
    [
        Token {
            kind: Arrow,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
