tests/snapshots/lexer__operators__comparison_expression.snap
---
source: tests/lexer.rs
expression: "lex(\"a == b and c != d\")"
---
Ok(
    [
        Token {
            kind: Identifier(
                "a",
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: EqEq,
            span: Span {
                start: 2,
                end: 4,
            },
        },
        Token {
            kind: Identifier(
                "b",
            ),
            span: Span {
                start: 5,
                end: 6,
            },
        },
        Token {
            kind: And,
            span: Span {
                start: 7,
                end: 10,
            },
        },
        Token {
            kind: Identifier(
                "c",
            ),
            span: Span {
                start: 11,
                end: 12,
            },
        },
        Token {
            kind: BangEq,
            span: Span {
                start: 13,
                end: 15,
            },
        },
        Token {
            kind: Identifier(
                "d",
            ),
            span: Span {
                start: 16,
                end: 17,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 17,
                end: 17,
            },
        },
    ],
)
