tests/snapshots/lexer__operators__eq_eq.snap
---
source: tests/lexer.rs
expression: "lex(\"==\")"
---
Ok(
    [
        Token {
            kind: EqEq,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
