tests/snapshots/lexer__operators__lt.snap
---
source: tests/lexer.rs
expression: "lex(\"<\")"
---
Ok(
    [
        Token {
            kind: Lt,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
