tests/snapshots/lexer__operators__plus.snap
---
source: tests/lexer.rs
expression: "lex(\"+\")"
---
Ok(
    [
        Token {
            kind: Plus,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
